Add comprehensive `README.md` for Parking Service detailing architecture, APIs, and setup instructions